--- a/package.json
+++ b/package.json
@@ -9,8 +9,10 @@
   },
   "dependencies": {
     "core-js": "^3.6.5",
+    "v-body-scroll-lock": "^1.1.3",
     "vue": "^2.6.11",
-    "vue-router": "^3.2.0"
+    "vue-router": "^3.2.0",
+    "vue2-google-maps": "^0.10.7"
   },
   "devDependencies": {
     "@typescript-eslint/eslint-plugin": "^2.33.0",
